NetworkPolicy/allow-haproxy-to-external.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-haproxy-to-external
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: haproxy-egress
  policyTypes:
  - Egress
  egress:
  - to:
    - ipBlock:
        cidr: 13.91.0.38/32
    - ipBlock:
        cidr: 13.91.0.38/32
    ports:
    - protocol: TCP
      port: 443
